# vida-diagnostics

./: .gitignore  PROJECT_SUMMARY.md  README.md  generate_url.py  generate_url.sh
docs/: API.md  ARCHITECTURE.md  AWS_CREDENTIALS_GUIDE.md  COMPLIANCE.md  DEPLOYMENT.md  USER_GUIDE.md
medical-imaging-pipeline/: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg
medical-imaging-pipeline/lambda_functions/: deidentification_handler.py  ingestion_handler.py
medical-imaging-pipeline/src/delivery/: __init__.py  presigned_url_handler.py
medical-imaging-pipeline/src/ingestion/: deidentifier.py  dicom_parser.py  metadata_extractor.py  validated_parser.py
medical-imaging-pipeline/src/lambda_functions/: __init__.py  deidentification_handler.py  ingestion_handler.py  validation_handler.py
medical-imaging-pipeline/src/monitoring/: __init__.py  cloudwatch_handler.py
medical-imaging-pipeline/src/orchestration/: __init__.py  lambda_handlers.py  step_functions.py
medical-imaging-pipeline/src/storage/: __init__.py  s3_handler.py
medical-imaging-pipeline/src/utils/: logger.py
medical-imaging-pipeline/src/validation/: schemas.py
medical-imaging-pipeline/state_machines/: dicom_processing_workflow.json
medical-imaging-pipeline/tests/: conftest.py
medical-imaging-pipeline/tests/fixtures/: sample_imaging.xml  sample_metadata.csv  sample_study.json
medical-imaging-pipeline/tests/integration/: test_validated_parser.py
medical-imaging-pipeline/tests/unit/: test_cloudwatch_handler.py  test_deidentifier.py  test_dicom_parser.py  test_lambda_handlers.py  test_metadata_extractor.py  test_presigned_url_handler.py  test_s3_handler.py  test_schemas.py  test_step_functions.py
src/delivery/: __init__.py
terraform/: .gitignore  README.md  backend.tf  main.tf  outputs.tf  provider.tf  terraform.tfvars.example  variables.tf
terraform/environments/dev/: terraform.tfvars
terraform/environments/prod/: terraform.tfvars
terraform/modules/iam/: main.tf  outputs.tf  variables.tf
terraform/modules/lambda/: main.tf  outputs.tf  variables.tf
terraform/modules/s3/: main.tf  outputs.tf  variables.tf
terraform/modules/step_functions/: main.tf  outputs.tf  variables.tf
terraform/scripts/: build_lambda_layer.sh  create_zip.py  deploy.sh  destroy.sh
tests/unit/: test_presigned_url_handler.py
